--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,8 @@
     <link  href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
-  <body class="inner-page">
+  <body>
+    <div class="container">
     <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
@@ -71,7 +72,8 @@
   </ul>
 </nav>
 </header>
-<main class="catalog-page">
+</div>
+<main class="container">
 <section class="navigation-top">
 <h2 class="visually-hidden">Навигация</h2>
 <ul class="breadcrumbs">
