--- a/index.html
+++ b/index.html
@@ -14,28 +14,30 @@
         </a>
         <ul class="site-navigation">
           <li><a href="catalog-dropdown">Каталог</a>
-            <ul class="catalog-dropdown-items">
-              <li><a href="сatalog.html/brand_new">Новинки</a></li>
-              <li><a href="сatalog.html/sliv">Сливочное</a></li>
-              <li><a href="сatalog.html/sher">Шербеты</a></li>
-              <li><a href="сatalog.html/fru">Фруктовый лед</a></li>
-              <li><a href="сatalog.html/mel">Мелорин</a></li>
-            </ul>
-          </li>
-          <li><a href="delivery">Доставка и оплата</a></li>
-          <li><a href="about-us">О компании</a></li>
-        </ul>
-       <ul class="user-navigation">
-          <li>
-          <a class="button-search" href="search.html"><!--Поиск--></a> <!--при скрытом или удаленном "поиск" съзжает наведение на ссылку. если оставить и "поиск", и лупу, все норм. что не так?-->
-            <form class="search-form" method="get" action="https:_.ru">
-              <p>
-                <label for="search-input" hidden="">Что ищем?</label>
-                <input type="text" id="search-input" placeholder="Что ищем?">
-              </p>
-            </form>
-          </li>
-          <li><a class="login-link" href="login.html">Вход</a>
+          <ul class="catalog-dropdown-items">
+            <li><a href="сatalog.html/brand_new">Новинки</a></li>
+            <li><a href="сatalog.html/sliv">Сливочное</a></li>
+            <li><a href="сatalog.html/sher">Шербеты</a></li>
+            <li><a href="сatalog.html/fru">Фруктовый лед</a></li>
+            <li><a href="сatalog.html/mel">Мелорин</a></li>
+          </ul>
+        </li>
+        <li><a href="delivery">Доставка и оплата</a></li>
+        <li><a href="about-us">О компании</a></li>
+      </ul>
+      <ul class="user-navigation">
+        <li>
+          <a class="button-search" href="search.html"></a>
+          <!--<a class="button-search" href="search.html">Поиск</a> при скрытом или удаленном "поиск" съзжает наведение на ссылку. если оставить и "поиск", и лупу, все норм. что не так?-->
+          <form class="search-form" method="get" action="https:_.ru">
+            <p>
+              <label for="search-input" hidden="">Что ищем?</label>
+              <input type="text" id="search-input" placeholder="Что ищем?">
+            </p>
+          </form>
+        </li>
+        <li>
+          <a class="login-link" href="login.html">Вход</a>
           <form class="login-form" method="get" action="https:_.ru">
             <p>
               <label for="login-user" hidden="">Электронная почта</label>
@@ -50,7 +52,7 @@
             <a class="login-form-link" href="#">Новая регистрация</a>
           </form>
         </li>
-        <li><a class="cart-button" href="catr.html">Пусто</a>
+        <li><a class="cart-button" href="cart.html">Пусто</a>
         <div class="basket-form">
           <table>
             <tr>
@@ -79,7 +81,7 @@
   <ul class="excellence">
     <li><img src="img/ice-cream.svg" alt="Иконка мороженого">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
     <li><img src="img/eco.svg" alt="Иконка эко-продукта">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-    <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+    <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
     <li><img src="img/thermometer.svg" alt="Иконка термометр">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
   </ul>
 </section>
@@ -143,10 +145,8 @@
 </div>
 <div class="footer-info">
   <ul class="flex-conteiner-footer-info">
-    <li><a class="info" href="#">Для поставщиков</a></li>
-    <li><a class="info" href="#">О производстве</a></li>
-  </ul>
-  <ul class="flex-conteiner-footer-info">
+    <li class="footer-info"><a class="info" href="#">Для поставщиков</a></li>
+    <li class="footer-info"><a class="info" href="#">О производстве</a></li>
     <li><a class="info" href="#">Наши документы</a></li>
     <li><a class="info" href="#">Экологические стандарты</a></li>
   </ul>
