--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       <ul class="user-navigation">
         <li>
           <a class="button-search" href="search.html"></a>
-          <!--<a class="button-search" href="search.html">Поиск</a> при скрытом или удаленном "поиск" съзжает наведение на ссылку. если оставить и "поиск", и лупу, все норм. что не так?-->
           <form class="search-form" method="get" action="https:_.ru">
             <p>
               <label for="search-input" hidden="">Что ищем?</label>
@@ -144,11 +143,11 @@
   <div><a class="social-button" id="vk" href="#"></a></div>
 </div>
 <div class="footer-info">
-  <ul class="flex-conteiner-footer-info">
-    <li class="footer-info"><a class="info" href="#">Для поставщиков</a></li>
-    <li class="footer-info"><a class="info" href="#">О производстве</a></li>
-    <li><a class="info" href="#">Наши документы</a></li>
-    <li><a class="info" href="#">Экологические стандарты</a></li>
+  <ul class="flex-container-footer-info">
+    <li><a class="info-link" id="heart" href="#">Для поставщиков</a></li>
+    <li><a class="info-link" href="#">О производстве</a></li>
+    <li><a class="info-link" href="#">Наши документы</a></li>
+    <li><a class="info-link" href="#">Экологические стандарты</a></li>
   </ul>
 </div>
 <div class="footer-copyright">
