--- a/index.html
+++ b/index.html
@@ -78,11 +78,10 @@
   <h2 class="visually-hidden">Преимущества</h2>
   <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
   <ul class="excellence">
-    <li><img src="img/ice-cream.svg" alt="Иконка мороженого">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-    <li><img src="img/eco.svg" alt="Иконка эко-продукта">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-    <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
-    <li><img src="img/thermometer.svg" alt="Иконка термометр">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-  </ul>
+    <li class="about-us-ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+    <li class="about-us-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+    <li class="about-us-cows">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+    <li class="about-us-thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
 </section>
 <div class="blog-newsletter">
   <section class="blog">
@@ -151,8 +150,8 @@
   </ul>
 </div>
 <div class="footer-copyright">
-  <p>Сделано в HTML Academy</p>
-  <a class="htmlacademy-button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" alt="логотип htmlacademy" width="108" height="39"></a>
+  <p>Сделано в <a class="HTML-Academy" href="https://htmlacademy.ru">HTML Academy</a> @ 2016</p>
+  <img src="img/logo-htmlacademy.svg" alt="логотип htmlacademy" width="108" height="39">
 </div>
 </footer>
 </div>
