--- a/index.html
+++ b/index.html
@@ -79,14 +79,15 @@
   <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
   <ul class="excellence">
     <li class="about-us-ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-    <li class="about-us-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
     <li class="about-us-cows">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+    <li class="about-us-eco">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+    
     <li class="about-us-thermometer">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
   </section>
   <div class="blog-newsletter">
     <section class="blog">
       <h3>Новое в нашем блоге</h3>
-      <a href="blog.html">10 способов сервировки фруктовых шербетов к столу
+      <a href="blog.html">10 способов сервировки<br> фруктовых шербетов к<br> столу <!--как сделать перенос строк как по макету?-->
       </a>
     </section>
     <section class="newsletter">
