fixing validation errors

--- a/catalog.html
+++ b/catalog.html
@@ -30,7 +30,7 @@
         <ul class="user-navigation">
           <li>
             <a class="button-search" href="search.html"></a>
-            <form class="search-form" method="get" action="https:_.ru">
+            <form class="search-form" method="get" action="https://eses.ru">
               <p>
                 <label for="search-input" hidden="">Что ищем?</label>
                 <input type="text" id="search-input" placeholder="Что ищем?">
@@ -39,7 +39,7 @@
           </li>
           <li>
             <a class="login-link" href="login.html">Вход</a>
-            <form class="login-form" method="get" action="https:_.ru">
+            <form class="login-form" method="get" action="https://eses.ru">
               <p>
                 <label for="login-user" hidden="">Электронная почта</label>
                 <input type="text" id="login-user" name="login" placeholder="Электронная почта">
@@ -121,7 +121,7 @@
         <img src="img/icecream-blueberries.jpg" alt="фото мороженки">
         <p class="card-price">410 ₽/кг</p>
         <a class="card-name">Сливочно-черничное с цельным ягодами черники</a>
-        <div><a class="button-preview" href="#">Быстрый просмотр</a></div>
+        <div><a class="button-preview" href="#">Быстрый просмотр</a></div>a
       </div>
       <div class="icecream-card">
         <img src="img/icecream-lemon.jpg" alt="фото мороженки">
@@ -156,8 +156,9 @@
       <div class="icecream-card">
         <img src="img/icecream-mint.jpg" alt="фото мороженки">
         <p class="card-price">420 ₽/кг</p>
-      <a class="card-name">Сливочное с мятным сиропом</a>
-      <div><a class="button-preview" href="#">Быстрый просмотр</a></div>
+        <a class="card-name">Сливочное с мятным сиропом</a>
+        <div><a class="button-preview" href="#">Быстрый просмотр</a></div>
+      </div>
     </div>
   </section>
 </main>
